@@ -1,4 +1,5 @@
 0.04
+ - Improve doc of Data::MARC::Leader.
  - Update copyright years.
 
 0.03 2023-11-20T14:39:39+01:00
